@@ -8,7 +8,9 @@ proc snapshot_vars { interp ns } {
             dict set result $var [interp eval $interp [list array get $var]]
         } else {
             if { [catch { interp eval $interp [list set $var] } data] } {
-                set data "@@DONT_EXISTS@@"
+                # This is the case where a variable is defined in the namespace
+                # but does not yet exist.
+                continue
             }
             dict set result $var $data
         }
@@ -119,21 +121,77 @@ proc tcltest::SetupTest { code } {
     catch {
         uplevel 1 $code
     } res opts
+    # See comment in tcltest::EvalTest about this hack with 'string range'.
+    set opts [string range " $opts" 1 end]
+    set res [string range " $res" 1 end]
     return -options $opts $res
 }
 
-#proc tcltest::EvalTest { code } {
-#}
+proc tcltest::EvalTest { code } {
+    catch {
+        uplevel 1 $code
+    } res opts
+    # Do not mark objects created after the test has been executed as
+    # related to the test.
+    memory tag ""
+    # After running the test, it is possible that the test result contains
+    # objects that were created in the extension. We want to identify
+    # all objects that were created in the extension to judge possible
+    # memory leaks. However, these objects in interp's result are expected
+    # and should not be considered as memory leaks.
+    #
+    # To avoid detecting such objects, we convert the interp's result to
+    # a new string object created from scratch and not associated with
+    # the extension. We will do this with the 'string range' command.
+    set opts [string range " $opts" 1 end]
+    set res [string range " $res" 1 end]
+    return -options $opts $res
+}
 
 proc tcltest::CleanupTest { code } {
 
+    variable filesMade
+
     catch {
         uplevel 1 $code
-        memory tag ""
     } res opts
 
+    # See comment in tcltest::EvalTest about this hack with 'string range'.
+    set opts [string range " $opts" 1 end]
+    set res [string range " $res" 1 end]
+
+    # Commands enclosed in "catch" in cleanup code for a test can leave
+    # references to objects created by the extension. I am not sure where they
+    # are stored. Unsetting ::errorInfo and ::errorCode does not work,
+    # and these references still remain in the interpreter.
+    # It looks like the only stable option to remove all possible
+    # references is to throw an error in script enclosed in
+    # "catch" command.
+    catch { unset not_existing_variable_here }
+
     # cleanup after tclvfs
-    catch { unset ::vfs::_unmountCmd }
+    if { [array exists ::vfs::_unmountCmd] } {
+        if { [array size ::vfs::_unmountCmd] } {
+            puts [outputChannel] "WARNING: ::vfs::_unmountCmd is not empty: \[[array get ::vfs::_unmountCmd]\]"
+        }
+        unset ::vfs::_unmountCmd
+    }
+
+    # tcltest::makeFile stores the names of the created files in
+    # the filesMade variable. The filename may have been generated by
+    # the extension or may contain linked objects (such as a normalized path
+    # or internal file system representation) generated by the extension.
+    # To clear all references to objects created by the extension, we convert
+    # the filenames in this variable to normal strings.
+    if { [info exists filesMade] } {
+        set result [list]
+        foreach fn $filesMade {
+            lappend result [string range " $fn" 1 end]
+        }
+        set filesMade $result
+        # fn variable also contains a file name! release it now.
+        unset -nocomplain fn
+    }
 
     foreach msg [compare_snapshot $::tcltest::ss [create_snapshot]] {
         puts [outputChannel] $msg
@@ -152,7 +210,7 @@ proc tcltest::CleanupTest { code } {
             if { [string match "*/generic/regcomp.c * $::tcltest::testname" $line] } continue
             if { [string match "*/generic/regc_*.c * $::tcltest::testname" $line] } continue
             if { ![info exists fo] } {
-                set fo [open "${::tcltest::testname}.dump" w]
+                set fo [open "x-${::tcltest::testname}.memdump" w]
             }
             puts $fo $line
         }
@@ -160,8 +218,23 @@ proc tcltest::CleanupTest { code } {
     close $fi
     if { [info exists fo] } {
         close $fo
+    } elseif { [file exists "x-${::tcltest::testname}.memdump"] } {
+        file delete "x-${::tcltest::testname}.memdump"
     }
-    file delete -force $memdump
+    file delete $memdump
 
     return -options $opts $res
+}
+
+proc check_memleaks {} {
+    set found 0
+    foreach fn [glob -nocomplain -type f *.memdump] {
+        set found 1
+        puts ""
+        puts "=== Memory leaks in [file rootname [file tail $fn]] ==="
+        puts [string trim [read [set fp [open $fn]]]][close $fp]
+        puts "================================="
+        puts ""
+    }
+    return $found
 }
